--- a/src/components/UI/AboutSection.module.scss
+++ b/src/components/UI/AboutSection.module.scss
@@ -7,7 +7,6 @@
     max-height: 40rem;
     justify-content: space-between;
     color: white;
-    margin: 15% 0 10%;
 }
 .textL,
 .textR {
@@ -23,7 +22,6 @@
     width: 100%;
     height: 20rem;
     display: flex;
-    margin-top: 3rem;
     justify-content: center;
 
     background-size: cover;
@@ -63,8 +61,8 @@
         &:nth-child(4) {
             bottom: 0%;
             left: 30%;
-            width: 4rem;
-            height: fit-content;
+            width: 100%;
+            // height: fit-content;
             z-index: 5;
             @include responsiveMin1800 {
                 width: 6rem;
@@ -91,7 +89,7 @@
             bottom: 0%;
             left: 40%;
             width: 5rem;
-            height: fit-content;
+            // height: -content;
             z-index: 4;
 
             @include responsiveMin1800 {
@@ -120,7 +118,7 @@
         &:nth-child(6) {
             bottom: -2%;
             width: 6rem;
-            height: fit-content;
+            // height: fit-content;
             z-index: 3;
             transform: translate3d(50%, 0px, 0px);
 
@@ -145,7 +143,6 @@
     width: 100%;
     height: 20rem;
     display: flex;
-    margin-top: 3rem;
     justify-content: center;
     position: relative;
 
