--- a/src/components/UI/Icon.module.scss
+++ b/src/components/UI/Icon.module.scss
@@ -15,7 +15,7 @@
     }
     img {
         height: 4rem;
-        width: fit-content;
+        // width: fit-content;
         filter: drop-shadow(0px 1px 0px rgb(195, 195, 195));
 
         @include responsiveMax700 {
