--- a/src/index.scss
+++ b/src/index.scss
@@ -111,7 +111,7 @@ p {
     height: 100vh;
     width: 100vw;
     position: fixed;
-    opacity: 0.3;
+    opacity: 0.4;
     z-index: -99;
     img {
         position: fixed;
